--- a/asset/imcomp/traherne/traherne.css
+++ b/asset/imcomp/traherne/traherne.css
@@ -77,7 +77,6 @@ body {
 #left_panel_content { /* container for via or base image */
   position: relative;
   display: inline-block;
-  border: 1px solid red;
   width: 100%;
   height: 70vh;
 }
@@ -91,6 +90,12 @@ body {
   padding: 0 !important;
   margin: 0 !important;
   vertical-align: middle;
+}
+#right_panel_content { /* container for via or comp image */
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 70vh;
 }
 #right_panel img {
   max-width: 100%;
