@done: _upload, _compare @todo: radio button based selection, toggle, horizontal ref. line, projective transform

--- a/asset/imcomp/traherne/traherne.css
+++ b/asset/imcomp/traherne/traherne.css
@@ -129,6 +129,12 @@ body {
   width: 2%;
 }
 
+.img_upload_status {
+  display: inline-block;
+  font-size: large;
+  cursor: default;
+}
+
 #message_panel {
   font-size: small;
   font-family: mono;
