updated variable names for more clarity

--- a/asset/imcomp/traherne/traherne.css
+++ b/asset/imcomp/traherne/traherne.css
@@ -28,14 +28,15 @@ body {
   padding: 0.4%;
 }
 
-#top_panel {
+#global_control_panel {
   position: relative;
-  display: inline-block;
+  display: block;
   overflow-y: auto;
   width: 100%;
-  padding: 0.5% 0.2%;
+  padding: 0.8% 0.4%;
   margin: 0;
-  background-color: #F5F5F5;
+  background-color: #F2F2F2;
+  text-align: left;
 }
 
 #middle_panel {
@@ -44,6 +45,7 @@ body {
   margin: 0;
   padding: 0;
   border: 1px solid #9E9E9E;
+  border-top: 0;
   overflow: hidden;
   width: 100%;
 }
@@ -57,47 +59,48 @@ body {
   margin: 0;
   padding: 0.2% 0;
   width: 48%;
-  border: 1px solid #9E9E9E;
   text-align: center;
   vertical-align: middle;
 }
 .horizontal_ref_line {
   content: " ";
-  display: block;
+  display: none;
   border-bottom: 1px solid black;
 }
 
 /* base panel */
-#left_panel {
+#left_content_panel {
   text-align: right !important;
   padding: 0 !important;
   margin: 0 !important;
   vertical-align: middle;
+  border-right: 1px solid #9E9E9E;
 }
-#left_panel_content { /* container for via or base image */
+#left_content_panel_container { /* container for via or base image */
   position: relative;
   display: inline-block;
   width: 100%;
   height: 70vh;
 }
-#left_panel_img img {
+#left_content_panel_container img {
   max-width: 100%;
 }
 
 /* comp panel */
-#right_panel {
+#right_content_panel {
   text-align: left !important;
   padding: 0 !important;
   margin: 0 !important;
   vertical-align: middle;
+  border-left: 1px solid #9E9E9E;
 }
-#right_panel_content { /* container for via or comp image */
+#right_content_panel_container { /* container for via or comp image */
   position: relative;
   display: inline-block;
   width: 100%;
   height: 70vh;
 }
-#right_panel img {
+#right_content_panel_container img {
   max-width: 100%;
 }
 .img_label {
@@ -145,7 +148,7 @@ body {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding: 1% 1%;
+  padding: 0.5% 0;
   margin: 0;
 }
 
