--- a/asset/imcomp/traherne/traherne.css
+++ b/asset/imcomp/traherne/traherne.css
@@ -77,11 +77,6 @@ body {
   vertical-align: middle;
   border-right: 1px solid #9E9E9E;
 }
-.horizontal_ref_line {
-  content: " ";
-  display: none;
-  border-bottom: 1px solid black;
-}
 
 /* base panel */
 #left_content {
@@ -95,7 +90,12 @@ body {
   width: 100%;
   height: 70vh;
 }
+/* this affects all img (even the via zoom img)
 #left_content_container img {
+  max-width: 100%;
+}
+*/
+#left_content_image {
   max-width: 100%;
 }
 
@@ -111,9 +111,15 @@ body {
   width: 100%;
   height: 70vh;
 }
+/*
 #right_content_container img {
   max-width: 100%;
 }
+*/
+#right_content_image {
+  max-width: 100%;
+}
+
 .img_label {
   font-size: medium;
   overflow: hidden;
@@ -142,10 +148,30 @@ body {
   display: inline-block;
   width: 2%;
 }
-
 .img_upload_status {
   display: inline-block;
   font-size: large;
   cursor: default;
 }
 
+/* horizontal reference line */
+#ref_line_container {
+  background-color: #e6e6e6;
+  padding: 0 !important;
+  margin: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+#ref_line_container:hover {
+  cursor: pointer;
+}
+
+.horizontal_ref_line {
+  z-index: 1000;
+  content: " ";
+  border-top: 1px solid white;
+  border-bottom: 1px solid black;
+  position: fixed;
+  width: 99%;
+  height: 2px;
+}
