@done: compare progress, logo, message panel, note to user on diff color @todo: package as windows installer

--- a/asset/imcomp/traherne/traherne.css
+++ b/asset/imcomp/traherne/traherne.css
@@ -37,6 +37,7 @@ body {
 #about_panel {
   display: inline-table;
   border: 1px solid #9E9E9E;
+  border-left: 10px solid #bc2b18;
   overflow: hidden;
   padding: 0.5rem;
   margin-right: 0.5rem;
