--- a/asset/imcomp/traherne/traherne.css
+++ b/asset/imcomp/traherne/traherne.css
@@ -10,7 +10,7 @@
 */
 
 body {
-    font-family: "Roboto", Helvetica, Arial, sans-serif; font-size: medium;
+    font-family: Sans;
     margin: 0;
     padding: 0;
     border: 0;
@@ -40,81 +40,19 @@ body {
     padding: 0.4%;
 }
 
-#top_panel {
-    display:inline-block;
-    border-left: 0.5em solid #bc2b18;
-    border-top: 0.1em solid #9E9E9E;
-    border-bottom: 0.1em solid #9E9E9E;
-    border-right: 0.1em solid #9E9E9E;
-    margin: 0;
-    padding:0;
-    height:8em;
-}
-#top_panel .about {
-    display:inline-table;
-    width:190px;
-    text-align:center;
-    height:100%;
-    padding:1em 0;
-    margin:0;
-    vertical-align:top;
-}
-#top_panel .about img {
-    width:171px;
-    height:60px;
-}
-#top_panel .about .links {
-    font-size:0.7em;
-    margin-top:1em;
-}
+.top_panel { display:block; border:1px solid #9e9e9e; height:8em; overflow:hidden; }
+.top_panel .about { vertical-align:top; }
+.top_panel .about .links { font-size:0.7em; }
 
-#top_panel .controls {
-    display:inline-block;
-    font-size:small;
-    margin:0;
-    padding:0;
-    border-left:1px solid #9E9E9E;
-    border-right:1px solid #9E9E9E;
-    height:100%;
-}
-#top_panel .controls table {
-    height:100%;
-    margin:0 1em;
-}
-#top_panel .controls button {
-    font-size:small;
-}
+.top_panel .control { vertical-align:top; padding:0 1em; }
+.top_panel .control > table { width:14em; }
 
-#top_panel .settings {
-    display:inline-block;
-    overflow-y:scroll;
-    overflow-x:hidden;
-    margin:0;
-    padding:0.4em;
-    vertical-align:top;
-    height:100%;
-    max-width:28em;
-}
-#top_panel .settings table {
-    border:1px solid #f2f2f2;
-    border-collapse:collapse;
-    font-size:small;
-}
+.top_panel .config { width:100%; vertical-align:top; }
+.top_panel .config .config_container { width:100%; height:7.5em; overflow:auto; }
 
-#top_panel .settings table th {
-    border:1px solid #f2f2f2;
-    padding:0.4em 1em;
-}
-#top_panel .settings table td {
-    border:1px solid #f2f2f2;
-    padding:0.4em 1em;
-}
-#top_panel .settings select {
-    font-size:small;
-}
-#top_panel .settings input[type="checkbox"] {
-    vertical-align:middle;
-}
+.top_panel .config .config_container .config_item { display:inline-table; background-color:#f2f2f2; border-radius:0.5em; margin:0.4em 0.2em; padding:0.2em; }
+.top_panel .config .config_container .config_item .title { display:table-row; text-align:center; }
+.top_panel .config .config_container .config_item .options { display:table-row; }
 
 #middle_panel {
     display: table;
@@ -124,22 +62,17 @@ body {
     border: 1px solid #9E9E9E;
     overflow: hidden;
     width: 100%;
-    font-size:small;
 }
 #middle_panel label {
-    font-size:small;
     vertical-align:middle;
 }
 #middle_panel button {
-    font-size:small;
     vertical-align:middle;
 }
 #middle_panel select {
-    font-size:small;
     vertical-align:middle;
 }
 #middle_panel input[type="radio"] {
-    font-size:small;
     vertical-align:middle;
 }
 
@@ -238,7 +171,6 @@ body {
 }
 
 .img_label {
-    font-size: medium;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
