--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -94,6 +94,10 @@ body {
     border-top: 5px solid #673AB7 !important;
 }
 
+.step4_content_color {
+    border-top: 5px solid #673AB7 !important;
+}
+
 .panel_content {
     margin:0.5rem 1rem;
     padding:1rem;
@@ -108,23 +112,42 @@ body {
   font-size:0.8rem;
 }
 
+/* top panel for branding and global settings */
+.top_panel {
+  padding: 1rem;
+  height: 8rem;
+  border: 1px solid;
+}
+.top_left {
+  width: 40%;
+  height: 8rem;
+  float: right;
+}
+.top_right {
+  width: 60%;
+  border: 1px solid;
+  height: 6rem;
+  float: right;
+}
+
 #step1_panel {
   text-align: center;
   height: 50rem;
+  font-size: larger;
 }
 
 .step1_text {
-  padding: 21rem;
+  padding: 20rem;
 }
 .step1_text button {
   border-radius: 10px;
   border-color: #673AB7;
-  width: 5rem;
-  height: 2rem;
+  width: 6rem;
+  height: 2.5rem;
   background-color: #673AB7;
   color: white;
   cursor: pointer;
-
+  font-size: 18px;
 }
 
 #step3_panel .control_panel {
@@ -134,6 +157,38 @@ body {
 
 #step3_panel .control_panel .space {
   margin-left:2rem;
+}
+
+.results_tab {
+  padding:5px;
+  display: inline-block;
+  font-size: large;
+  border-top: 3px solid #9E9E9E;
+  border-right: 1px solid #9E9E9E;
+  border-left: 1px solid #9E9E9E;
+  cursor: pointer;
+}
+
+.results_tab.active {
+  border-top: 3px solid #673AB7;
+}
+
+#results_save_panel {
+  width: 100%;
+  height: 4rem;
+  text-align: center;
+  padding: 1.2rem;
+}
+
+#results_save_panel button {
+  border-radius: 20px;
+  background-color: #673AB7;
+  border-color: #673AB7;
+  color: white;
+  width: 5rem;
+  height: 2rem;
+  cursor: pointer;
+  justify-content: center;
 }
 
 #files_panel {
@@ -159,7 +214,7 @@ body {
 
 #compare_panel button {
   background-color: #673AB7;
-  border-radius: 10px;
+  border-radius: 20px;
   border-color: #673AB7;
   width: 5rem;
   height: 2rem;
@@ -171,7 +226,7 @@ body {
 }
 
 #step3_panel #content_selector {
-  display:none;
+  display: none;
 }
 
 #step3_panel #content_label {
@@ -205,8 +260,16 @@ body {
   text-align: center;
   vertical-align: middle;
   border-right: 1px solid #9E9E9E;
+  border-top: 1px solid #9E9E9E;
 }
 
+.tab_tools_panel {
+  width: 100%;
+  height: 5rem;
+  padding: 1px;
+  border: 1px solid;
+  text-align: center;
+}
 
 .img_label {
   font-size: medium;
@@ -284,6 +347,13 @@ body {
   padding: 0 !important;
   margin: 0 !important;
 }
+#left_content img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: 50%;
+  left: 50%;
+}
 #left_content_container { /* container for via or base image */
   position: relative;
   display: inline-block;
@@ -355,6 +425,23 @@ body {
     height: 100%;
     top: 0;
     right: 0;
+}
+.zoom_items {
+  display: flex;
+}
+.non_draggable {
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+/* results display panel */
+#result_display {
+  width: 100%
+  height: 200px;
 }
 
 /* Comparison settings */
