--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -355,6 +355,7 @@ body {
   left: 50%;
 }
 #left_content_container { /* container for via or base image */
+  text-align: left;
   position: relative;
   display: inline-block;
   width: 100%;
@@ -476,4 +477,31 @@ body {
 }
 #comparison_settings .alg_description_text {
     font-size: 0.8rem;
+}
+
+/* for sliding between two images */
+.img-comp-img {
+  position: absolute;
+  width: auto;
+  height: auto;
+  overflow: hidden;
+}
+.img-comp-img img {
+  display:block;
+  vertical-align:middle;
+}
+.img-comp-slider {
+  position: absolute;
+  z-index:9;
+  cursor: ew-resize;
+  /*set the appearance of the slider:*/
+  width: 20px;
+  height: 20px;
+  background-color: #2196F3;
+  opacity: 0.7;
+  border-radius: 50%;
+}
+.img-comp-container {
+  position: relative;
+  /* height: 200px; /*should be the same height as the images*/
 }
