--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -99,12 +99,11 @@ body {
 }
 
 .panel_content {
-    margin:0.5rem 1rem;
-    padding:1rem;
-    display:none;
-    border:1px solid #cccccc;
+  margin:0.5rem 1rem;
+  padding:1rem;
+  display:none;
+  border:1px solid #cccccc;
 }
-
 .bottom {
   display:block;
   text-align:center;
@@ -114,8 +113,9 @@ body {
 
 /* top panel for branding and global settings */
 .top_panel {
-  padding: 1rem;
-  height: 8rem;
+  margin:0.5rem 1rem;
+  padding: 0.2rem;
+  height: 5rem;
   border: 1px solid;
 }
 .top_left {
@@ -125,8 +125,9 @@ body {
 }
 .top_right {
   width: 60%;
-  border: 1px solid;
-  height: 6rem;
+  /* border: 1px solid; */
+  border: 1px;
+  height: 4.5rem;
   float: right;
 }
 .top_right select {
@@ -144,10 +145,10 @@ body {
 .step1_text {
   padding: 20rem;
 }
-.step1_text button {
-  border-radius: 10px;
+#step1_panel button {
+  border-radius: 20px;
   border-color: #673AB7;
-  width: 6rem;
+  width: 7rem;
   height: 2.5rem;
   background-color: #673AB7;
   color: white;
@@ -190,8 +191,9 @@ body {
   background-color: #673AB7;
   border-color: #673AB7;
   color: white;
-  width: 5rem;
-  height: 2rem;
+  width: 7rem;
+  height: 2.5rem;
+  font-size: 18px;
   cursor: pointer;
   justify-content: center;
 }
@@ -212,7 +214,7 @@ body {
 
 #compare_panel {
   width: 100%;
-  height: 40px;
+  height: 52px;
   border: 1px solid #cccccc;
   text-align: center;
   padding: 0.2rem;
@@ -222,10 +224,11 @@ body {
   background-color: #673AB7;
   border-radius: 20px;
   border-color: #673AB7;
-  width: 5rem;
-  height: 2rem;
+  width: 7rem;
+  height: 2.5rem;
   color: white;
   cursor: pointer;
+  font-size: 18px;
   /* vertical-align: middle;
   horizontal-align:middle; */
   justify-content: center;
@@ -283,10 +286,10 @@ body {
   height: 1.5rem;
 }
 
-.tab_tools_panel .toggle_controls input[type=checkbox]
+/* .tab_tools_panel .toggle_controls input[type=checkbox]
 {
   transform: scale(2);
-}
+} */
 
 .img_label {
   font-size: medium;
