--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -149,12 +149,12 @@ body {
 
 #step1_panel {
   text-align: center;
-  height: 50rem;
+  height: 30rem;
   font-size: larger;
 }
 
 .step1_text {
-  padding: 20rem;
+  padding: 12rem;
 }
 #step1_panel button {
   border-radius: 20px;
@@ -239,11 +239,11 @@ body {
   background-color: #673AB7;
   border-radius: 20px;
   border-color: #673AB7;
-  width: 7rem;
+  width: 12rem;
   height: 2.5rem;
   color: white;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 22px;
   /* vertical-align: middle;
   horizontal-align:middle; */
   justify-content: center;
@@ -413,6 +413,7 @@ body {
   width: 100%;
   height: 66vh;
   min-height: 66vh;
+  overflow: auto;
 }
 #left_content_img_panel {
     position: relative;
@@ -598,4 +599,7 @@ body {
 .toolbar li:hover {
   color:red;
   cursor:pointer;
+}
+#icon_magnify_div {
+  margin-top: 0.2rem;
 }
