--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -68,7 +68,47 @@ body {
   text-decoration: none;
   color: #673AB7;
 }
-
+.instructions {
+  display: flex;
+  /* margin: 0.5rem 0.5rem 0.5rem 0.5rem; */
+  margin-top: 0.5rem;
+  padding: 0.2rem;
+  height: 5rem;
+  text-align: center;
+  border: 1px;
+  width: 100%;
+  border: 1px solid #673AB7;
+}
+.instruction_step1 {
+  /* background-color: #fcf7ab; */
+  background-color: #ffad02;
+  padding: 0.8rem;
+  width: 35%;
+  opacity:0.5;
+  color: white;
+}
+.instruction_step2 {
+  /* background-color: #fcf7ab; */
+  background-color: #ffad02;
+  padding: 0.8rem;
+  width: 35%;
+  opacity:0.5;
+  color: white;
+}
+.instruction_step3 {
+  /* background-color: #fcf7ab; */
+  background-color: #ffad02;
+  padding: 0.8rem;
+  width: 35%;
+  opacity:0.5;
+  color: white;
+}
+.right_arrow {
+  margin-top: 1.3rem;
+  width: 5%;
+  color: #673AB7;
+  font-weight: bolder;
+}
 .step1_button_color {
     background-color:#673AB7;
     color:white;
@@ -93,27 +133,28 @@ body {
     opacity:1.0 !important;
 }
 
-.step1_content_color {
-    border-top: 5px solid #673AB7 !important;
-}
+/* .step1_content_color {
+    border-top: 1px solid;
+    b#673AB7 !important;
+} */
 
-.step2_content_color {
+/* .step2_content_color {
     border-top: 5px solid #FFC107 !important;
-}
+} */
 
-.step3_content_color {
+/* .step3_content_color {
     border-top: 5px solid #673AB7 !important;
-}
+} */
 
-.step4_content_color {
+/* .step4_content_color {
     border-top: 5px solid #673AB7 !important;
-}
+} */
 
 .panel_content {
-  margin:0.5rem 1rem;
-  padding:1rem;
+  /* margin:0.5rem 0.5rem; */
+  /* padding: 0.2rem; */
   display:none;
-  border:1px solid #cccccc;
+  /* border:1px solid #cccccc; */
 }
 .bottom {
   display:block;
@@ -124,10 +165,15 @@ body {
 
 /* top panel for branding and global settings */
 .top_panel {
-  margin:0.5rem 1rem;
+  /* margin:0.5rem 1rem; */
   padding: 0.2rem;
   height: 4rem;
-  border: 1px solid;
+  /* border: 1px solid; */
+  /* background-color: #fcf7ab; */
+  /* background-color: #ffad02; */
+  background-color: #9bd7ef;
+  /* text-align: center; */
+  /* display: flex; */
 }
 .top_left {
   width: 40%;
@@ -148,13 +194,17 @@ body {
 }
 
 #step1_panel {
+  margin-top: 0.5rem;
   text-align: center;
   height: 30rem;
   font-size: larger;
+  color: #673AB7;
+  border: 1px solid;
 }
 
 .step1_text {
   padding: 12rem;
+  height: 100%;
 }
 #step1_panel button {
   border-radius: 20px;
@@ -179,6 +229,9 @@ body {
   margin-left:2rem;
 }
 
+#results_tabs_panel {
+  margin-top: 0.5rem;
+}
 .results_tab {
   padding:5px;
   display: inline-block;
@@ -213,37 +266,44 @@ body {
 }
 
 #files_panel {
-  display:block;
-  padding-bottom:1rem;
+  display: block;
+  padding: 0.5rem;
   width: 100%;
   height: auto;
   max-height: 200px;
   overflow: auto;
   scroll: auto;
-  border: 1px solid #cccccc;
+  /* border: 1px solid #cccccc; */
+  border: 1px solid #673AB7;
 }
 #files_panel img {
   height: 80px;
   margin:0 1em;
 }
+.files_panel_header {
+  width: 100%;
+  height: 1.8rem;
+  padding: 0.4rem;
+  background-color: #9bd7ef;
+}
 
 #compare_panel {
   width: 100%;
-  height: 52px;
-  border: 1px solid #cccccc;
+  height: 3.6rem;
+  /* border: 1px solid #cccccc; */
   text-align: center;
   padding: 0.2rem;
 }
 
 #compare_panel button {
   background-color: #673AB7;
-  border-radius: 20px;
+  border-radius: 30px;
   border-color: #673AB7;
-  width: 12rem;
-  height: 2.5rem;
+  width: 30%;
+  height: 3rem;
   color: white;
   cursor: pointer;
-  font-size: 22px;
+  font-size: xx-large;
   /* vertical-align: middle;
   horizontal-align:middle; */
   justify-content: center;
@@ -267,9 +327,10 @@ body {
   table-layout: fixed;
   margin: 0;
   padding: 0;
-  border: 1px solid #9E9E9E;
+  /* border: 1px solid #9E9E9E; */
   overflow: hidden;
   width: 100%;
+  /* border: 1px solid #673AB7; */
 }
 #middle_panel .row {
   display: table-row;
@@ -283,8 +344,9 @@ body {
   width: 48%;
   text-align: center;
   vertical-align: middle;
-  border-right: 1px solid #9E9E9E;
-  border-top: 1px solid #9E9E9E;
+  /* border-right: 1px solid #9E9E9E;  */
+  /* border-top: 1px solid #9E9E9E; */
+
 }
 
 .tab_tools_panel {
@@ -294,6 +356,9 @@ body {
   border: 1px solid;
   text-align: center;
   justify-content: center;
+  border-top: 1px solid #673AB7;
+  border-left: 1px solid #673AB7;
+  border-right: 1px solid #673AB7;
 }
 
 .tab_tools_panel .toggle_controls select {
@@ -344,10 +409,7 @@ body {
 #ref_line_container {
   padding: 0 !important;
   margin: 0 !important;
-}
-
-#ref_line_container:hover {
-  cursor: pointer;
+  border: 1px solid ##673AB7;
 }
 
 .horizontal_ref_line {
@@ -358,6 +420,7 @@ body {
   position: fixed;
   width: 96.5%;
   height: 4px;
+
 }
 .horizontal_ref_line:hover {
   cursor: pointer;
@@ -392,6 +455,14 @@ body {
 
 
 /* base panel */
+.contents_panel_header {
+  width: 100%;
+  height: 1.8rem;
+  padding: 0.4rem;
+  background-color: #9bd7ef;
+  margin-top: 0.5rem;
+}
+
 #left_content {
   text-align: right !important;
   padding: 0 !important;
@@ -413,7 +484,7 @@ body {
   width: 100%;
   height: 66vh;
   min-height: 66vh;
-  overflow: auto;
+  border: 1px solid #673AB7;
 }
 #left_content_img_panel {
     position: relative;
@@ -455,6 +526,7 @@ body {
   width: 100%;
   height: 66vh;
   min-height: 66vh;
+  border: 1px solid #673AB7;
 }
 #right_content_img_panel {
     position: relative;
