--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -17,23 +17,26 @@ body {
   background-color: #ffffff;
   color: #000000;
 }
-
 * {
   box-sizing: border-box;
 }
-
 .display-none {
   display: none;
 }
 .display-inline-block {
   display: inline-block;
 }
-
-/*
-* {
-  border:1px solid red;
+.imcomp_container {
+  position:relative;
+  display:grid;
+  grid-template-rows:auto auto 1fr;
+  grid-row-gap:0.5em;
+  padding:0.3em;
+  background-color:#ffffff;
+  height:98vh;
+  max-height:100vh;
+  width:100vw;
 }
-*/
 .top {
   display:block;
   text-align:center;
@@ -58,22 +61,11 @@ body {
     color:#808080;
 }
 
-.top_left_logo {
-  position: relative;
-  text-decoration: none;
-  font-size: 50px;
-  display: inline-block;
-}
-.top_left_logo a {
-  text-decoration: none;
-  color: #673AB7;
-}
 .instructions {
   display: flex;
   /* margin: 0.5rem 0.5rem 0.5rem 0.5rem; */
   margin-top: 0.5rem;
-  padding: 0.2rem;
-  height: 5rem;
+  height: 1.6rem;
   text-align: center;
   border: 1px;
   width: 100%;
@@ -81,30 +73,29 @@ body {
 }
 .instruction_step1 {
   /* background-color: #fcf7ab; */
-  background-color: #ffad02;
-  padding: 0.8rem;
+  background-color: #cccccc;
   width: 35%;
-  opacity:0.5;
-  color: white;
+  font-size: larger;
 }
 .instruction_step2 {
   /* background-color: #fcf7ab; */
-  background-color: #ffad02;
-  padding: 0.8rem;
+  background-color: #cccccc;
   width: 35%;
-  opacity:0.5;
-  color: white;
+  font-size: larger;
 }
 .instruction_step3 {
   /* background-color: #fcf7ab; */
-  background-color: #ffad02;
-  padding: 0.8rem;
+  background-color: #cccccc;
   width: 35%;
-  opacity:0.5;
+  font-size: larger;
+}
+.instruction_active {
+  background-color:#000000;
   color: white;
 }
+
 .right_arrow {
-  margin-top: 1.3rem;
+  margin-top: 0.2em;
   width: 5%;
   color: #673AB7;
   font-weight: bolder;
@@ -163,40 +154,73 @@ body {
   font-size:0.8rem;
 }
 
+.banner {
+  font-size: 5em;
+  padding:1em 0;
+  display: block;
+  text-align: center;
+  background-color: #673AB7;
+}
+.banner a {
+  text-decoration: none;
+  color: #673AB7;
+  color: white;
+}
+
 /* top panel for branding and global settings */
 .top_panel {
-  /* margin:0.5rem 1rem; */
-  padding: 0.2rem;
-  height: 4rem;
-  /* border: 1px solid; */
-  /* background-color: #fcf7ab; */
-  /* background-color: #ffad02; */
-  background-color: #9bd7ef;
-  /* text-align: center; */
-  /* display: flex; */
+  background-color: #673AB7;
+  padding:0.4em 0.5em;
 }
+.top_panel * { vertical-align: middle; }
+
+.top_left_logo {
+  font-size: 1.3em;
+  display: inline;
+  color:white;
+}
+.top_left_logo a {
+  text-decoration: none;
+  color:white;
+}
+.compare_panel { display:inline; margin-left:2em; }
+.compare_panel button { border:none; border-radius:0.5em; background-color:white; color:#673AB7; width:16em; font-size:1.4em; }
+
+/* toolbar  icons on top */
+.toolbar {
+  display:inline !important;
+  margin-left:4em;
+  margin-top:0.2em;
+}
+.toolbar div {
+  display:inline;
+}
+.toolbar svg {
+  fill:black;
+  height:1.6rem;
+  -moz-user-select:none;
+  -webkit-user-select:none;
+  -ms-user-select:none;
+}
+.toolbar svg:hover {
+  fill:yellow;
+  cursor:pointer;
+}
+.toolbar svg:active {
+  fill:blue;
+}
+
 .top_left {
   width: 40%;
   height: 8rem;
   float: right;
 }
-.top_right {
-  width: 55%;
-  /* border: 1px solid; */
-  border: 1px;
-  height: 4.5rem;
-  float: right;
-}
-.top_right select {
-  width: 12rem;
-  height: 1.5rem;
-  margin: 2px;
-}
+.top_right { display:inline-block !important; }
 
 #step1_panel {
   margin-top: 0.5rem;
   text-align: center;
-  height: 30rem;
+  /* height: 30rem; */
   font-size: larger;
   color: #673AB7;
   border: 1px solid;
@@ -222,6 +246,7 @@ body {
 
 #step3_panel .control_panel {
   display:none;
+  /* display: flex; */
   padding-bottom:1rem;
 }
 
@@ -284,29 +309,7 @@ body {
   width: 100%;
   height: 1.8rem;
   padding: 0.4rem;
-  background-color: #9bd7ef;
-}
-
-#compare_panel {
-  width: 100%;
-  height: 3.6rem;
-  /* border: 1px solid #cccccc; */
-  text-align: center;
-  padding: 0.2rem;
-}
-
-#compare_panel button {
-  background-color: #673AB7;
-  border-radius: 30px;
-  border-color: #673AB7;
-  width: 30%;
-  height: 3rem;
-  color: white;
-  cursor: pointer;
-  font-size: xx-large;
-  /* vertical-align: middle;
-  horizontal-align:middle; */
-  justify-content: center;
+  /* background-color: #9bd7ef; */
 }
 
 #step3_panel #content_selector {
@@ -459,7 +462,7 @@ body {
   width: 100%;
   height: 1.8rem;
   padding: 0.4rem;
-  background-color: #9bd7ef;
+  /* background-color: #9bd7ef; */
   margin-top: 0.5rem;
 }
 
@@ -643,46 +646,4 @@ body {
 .img-comp-container {
   position: relative;
   /* height: 200px; /*should be the same height as the images*/
-}
-
-/* toolbar  icons on top */
-.toolbar {
-  display:flex;
-  flex-direction: row;
-  margin-left:0.1rem;
-}
-.toolbar svg {
-  fill:black;
-  margin: 0.2rem 0.1rem;
-  height:2rem;
-  -moz-user-select:none;
-  -webkit-user-select:none;
-  -ms-user-select:none;
-}
-.toolbar svg:hover {
-  fill:yellow;
-  cursor:pointer;
-}
-.toolbar svg:active {
-  fill:blue;
-}
-.toolbar ul {
-  display:inline-block;
-  padding:0.2rem;
-  margin:0;
-}
-.toolbar li {
-  display: inline-block;
-  display:inline;
-  float:left;
-  padding:0rem 0.3rem;
-  border:1px
-  solid white;
-}
-.toolbar li:hover {
-  color:red;
-  cursor:pointer;
-}
-#icon_magnify_div {
-  margin-top: 0.2rem;
 }
