--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -489,6 +489,12 @@ body {
   margin-right: auto;
   top: 50%;
   left: 50%;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 #left_content_container { /* container for via or base image */
   text-align: left;
