--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -135,7 +135,6 @@ body {
 
 .banner {
   text-align: center;
-  background-color: #673AB7;
   object-fit: cover;
 }
 .banner img {
@@ -161,7 +160,7 @@ body {
 }
 .compare_panel {
   display:inline;
-  margin-left:2em;
+  margin-left: 1em;
 }
 .compare_panel button {
   border:none;
@@ -174,7 +173,6 @@ body {
 /* toolbar  icons on top */
 .toolbar {
   display:inline !important;
-  margin-left:4em;
   margin-top:0.2em;
 }
 .toolbar div {
@@ -193,6 +191,15 @@ body {
 }
 .toolbar svg:active {
   fill:blue;
+}
+
+#trnasformation_select {
+  font-size: larger;
+  width: 16rem;
+  margin-left: 20em;
+  background-color: white;
+  color: #673AB7;
+  border-radius: 0.5em;
 }
 
 .top_left {
@@ -244,22 +251,23 @@ body {
   height: 10rem;
   border: 1px solid #673AB7;
   display: flex;
-  /* grid-template-rows: 1fr 1fr 1fr; */
   text-align: center;
   width: 100%;
   padding: 4px;
 }
-.demo_space {
-  width: 4rem;
+.sample_images_div_row {
+  display: table;
 }
-/* .sample_images_div p {
-  width: 100%;
-  color: #673AB7;
-  font-size: larger;
-} */
+.demo_space {
+  width: 16rem;
+}
 .sample_images_set {
   cursor: pointer;
-  background: #673AB7;
+  display: table-cell;
+  border-spacing: 5px;
+}
+.sample_images_set img {
+  display:block;
 }
 
 #results_tabs_panel {
@@ -459,6 +467,16 @@ body {
     text-overflow:ellipsis;
     line-height:2rem;
     padding: 0.5rem 2rem;
+}
+
+#instructions_panel {
+  text-align: center;
+  display: block;
+  width: 100%;
+  background-color: #cccccc;
+  font-size: larger;
+  height: 3.5rem;
+  padding: 1rem;
 }
 
 /* misc. */
