--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -29,7 +29,7 @@ body {
 .imcomp_container {
   position:relative;
   display:grid;
-  grid-template-rows: auto auto auto 1fr;
+  grid-template-rows: auto auto auto auto 1fr;
   grid-row-gap:0.5em;
   padding:0.3em;
   background-color:#ffffff;
@@ -76,18 +76,21 @@ body {
   background-color: #cccccc;
   width: 35%;
   font-size: larger;
+  cursor: pointer;
 }
 .instruction_step2 {
   /* background-color: #fcf7ab; */
   background-color: #cccccc;
   width: 35%;
   font-size: larger;
+  cursor: pointer;
 }
 .instruction_step3 {
   /* background-color: #fcf7ab; */
   background-color: #cccccc;
   width: 35%;
   font-size: larger;
+  cursor: pointer;
 }
 .instruction_active {
   background-color:#000000;
@@ -227,12 +230,12 @@ body {
 #step1_panel button {
   border-radius: 20px;
   border-color: #673AB7;
-  width: 7rem;
+  width: 8rem;
   height: 2.5rem;
   background-color: #673AB7;
   color: white;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 22px;
 }
 .step1_panel_note {
   font-size: small;
@@ -254,12 +257,15 @@ body {
   text-align: center;
   width: 100%;
   padding: 4px;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 .sample_images_div_row {
   display: table;
 }
 .demo_space {
   width: 16rem;
+  overflowX: scroll;
 }
 .sample_images_set {
   cursor: pointer;
@@ -268,6 +274,12 @@ body {
 }
 .sample_images_set img {
   display:block;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 #results_tabs_panel {
@@ -473,10 +485,16 @@ body {
   text-align: center;
   display: block;
   width: 100%;
-  background-color: #cccccc;
   font-size: larger;
-  height: 3.5rem;
-  padding: 1rem;
+  height: 6rem;
+  padding: 0.5rem;
+  border: solid 1px #673AB7;
+}
+
+#instructions_panel p {
+  /* display: table-cell; */
+  vertical-align: middle;
+  text-align: center;
 }
 
 /* misc. */
