--- a/asset/imcomp/imcomp.css
+++ b/asset/imcomp/imcomp.css
@@ -92,7 +92,7 @@ body {
   cursor: pointer;
 }
 .instruction_active {
-  background-color:#000000;
+  background-color: #673AB7;
   color: white;
 }
 
@@ -173,17 +173,17 @@ body {
 /* toolbar  icons on top */
 .toolbar {
   display:inline !important;
-  margin-top:0.2em;
+  margin-top: 0.2em;
 }
 .toolbar div {
-  display:inline;
+  display: inline;
 }
 .toolbar svg {
-  fill:black;
-  height:1.6rem;
-  -moz-user-select:none;
-  -webkit-user-select:none;
-  -ms-user-select:none;
+  fill: white;
+  height: 1.6rem;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 .toolbar svg:hover {
   fill:yellow;
@@ -369,7 +369,6 @@ body {
   width: 100%;
   height: 3rem;
   padding: 10px;
-  border: 1px solid;
   text-align: left;
   justify-content: center;
   border-top: 1px solid #673AB7;
@@ -517,6 +516,10 @@ body {
   width: 100%;
   height: 70vh;
   min-height: 66vh;
+  border: 1px solid #673AB7;
+}
+#left_content_container img {
+  height: auto;
 }
 #left_content_img_panel {
     position: relative;
@@ -541,7 +544,8 @@ body {
     z-index: 1000;
     top: 0;
     height: 100%;
-    width: auto;
+    /* width: auto; */
+    width: 100%;
 }
 #left_content_image * {
   margin: auto;
@@ -650,6 +654,7 @@ body {
   width: auto;
   height: auto;
   overflow: hidden;
+
 }
 .img-comp-img img {
   display:block;
@@ -659,21 +664,42 @@ body {
   position: absolute;
   z-index:9;
   cursor: ew-resize;
-  width: 20px;
-  height: 20px;
-  background-color: #2196F3;
-  opacity: 0.7;
+  width: 40px;
+  height: 40px;
+  /* background-color: #673AB7; */
+  background-color: white;
+  border: 2px solid #673AB7;
+  color: #673AB7;
+  opacity: 1.0;
   border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 26px;
+  font-size: xx-large;
+
 }
 .img-comp-vert-slider {
   position: absolute;
   z-index:9;
   cursor: ns-resize;
-  width: 20px;
-  height: 20px;
-  background-color: #2196F3;
-  opacity: 0.7;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border: 2px solid #673AB7;
+  color: #673AB7;
+  opacity: 1.0;
   border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 32px;
+  font-size: xx-large
+}
+.hor-slide-border {
+  /* border-right: 2px solid #673AB7; */
+  border-right: 2px solid #673AB7;
+}
+.vert-slide-border {
+  border-bottom: 2px solid #673AB7;
 }
 .img-comp-container {
   position: relative;
